services/route/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    # kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: website
            port:
              number: 80
          
      - path: /api/books
        pathType: Prefix
        backend:
          service:
            name: shopapi
            port: 
              number: 3000

      - path: /shop
        pathType: Prefix
        backend:
          service:
            name: shopui
            port: 
              number: 80
